# claw-code

docs/: rag-web-ui.md
rust/crates/claw-rag-service/: Cargo.toml  Dockerfile
rust/crates/claw-rag-service/src/: chunk.rs  db.rs  embed.rs  ingest.rs  lib.rs  main.rs  qdrant_index.rs  search.rs
rust/crates/claw-rag-service/static/: index.html
